variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: '=' expected but ';' found.
count=0
^Variables:10: error: ';' expected but ')' found.
    recule())
            ^